@@ -31,4 +31,5 @@
   <Anty_Commander_title.label>Anty Commander</Anty_Commander_title.label>
   <AT_Launcher_A_title.label>Anty Launcher Shooter</AT_Launcher_A_title.label>
   <Anty_prototype_Wild.label>Wild proty</Anty_prototype_Wild.label>
+  <Tribal_Proty.label>Tribal Proty Doll</Tribal_Proty.label>
 </LanguageData>
