@@ -32,4 +32,5 @@
   <Anty_Commander_title.label>앤티 지휘관</Anty_Commander_title.label>
   <AT_Launcher_A_title.label>앤티 유탄사수</AT_Launcher_A_title.label>
   <Anty_prototype_Wild.label>야생 프로티</Anty_prototype_Wild.label>
+  <Tribal_Proty.label>부족민 프로티 인형</Tribal_Proty.label>
 </LanguageData>
